--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -1,1 +1,136 @@
 /* pages/detail/detail.wxss */
+
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 200rpx 0;
+  box-sizing: border-box;
+}
+
+/*整体view样式*/
+
+.containsView {
+  padding: 15rpx 15rpx 15rpx 15rpx;
+  margin-top: 15rpx;
+  margin-bottom: 15rpx;
+  background-color: white;
+}
+
+/*头部整体样式*/
+
+.topContainsView {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 18rpx;
+}
+
+/**
+ * 头像样式
+*/
+
+.profileImage {
+  width: 60rpx;
+  height: 60rpx;
+  border-radius: 30rpx;
+}
+
+/*头部显示名字和时间整体样式*/
+
+.topRightView {
+  margin-left: 15rpx;
+  display: flex;
+  flex-direction: column;
+}
+
+/*用户名称样式*/
+
+.topRightName {
+  font-size: 24rpx;
+}
+
+/*时间样式*/
+
+.topRightTime {
+  font-size: 20rpx;
+  color: #b8b2b2;
+  margin-top: 10rpx;
+}
+
+/*文字内容样式*/
+
+.centerContent {
+  font-size: 24rpx;
+  line-height: 24rpx;
+}
+
+/*图片九宫格样式*/
+
+.imgContent {
+  display: flex;
+  flex-direction: row;
+  flex-wrap:wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: flex-start;
+  margin-top: 15rpx;
+}
+
+.item {
+  display: flex;
+  flex-direction: row;
+  width:32%;
+  margin:1px;
+  flex-wrap:wrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+}
+
+/*底部view整体样式*/
+
+.bottomView {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/*每个Item样式*/
+
+.bottomItemView {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 18rpx;
+  padding-left: 10rpx;
+  padding-right: 10rpx;
+}
+
+/*Item样式中的图标样式 顶 踩 分享 评论*/
+
+.bottomItemImage {
+  width: 45rpx;
+  height: 45rpx;
+}
+
+/*Item中的文字样式 顶 踩 分享 评论*/
+
+.bottomItemText {
+  font-size: 15rpx;
+  color: #b8b2b2;
+  margin-left: 10rpx;
+  margin-top: 8rpx;
+}
+
+/*分割线样式*/
+
+.divLine {
+  background: #f3f3f3;
+  width: 100%;
+  height: 15rpx;
+}
