--- a/pages/city/city.wxml
+++ b/pages/city/city.wxml
@@ -1,2 +1,13 @@
 <!--pages/city/city.wxml-->
-<text>pages/city/city.wxml</text>
+<import src="cell.wxml" /> 
+<view class="pages-container"> 
+ <scroll-view scroll-y="true" class="pages-wrapper"> 
+  <view wx:for="{{pageItems}}" wx:key="{{text}}"> 
+   <view class="pages-row"> 
+    <template is="cell" data="{{...item[0],cellHeight}}" /> 
+    <template is="cell" data="{{...item[1],cellHeight}}" /> 
+    <template is="cell" data="{{...item[2],cellHeight}}" /> 
+   </view> 
+  </view> 
+ </scroll-view> 
+</view> 
