--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,10 +1,11 @@
 /**index.wxss**/
+
+/*获取用户信息样式*/
 .userinfo {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
 .userinfo-avatar {
   width: 128rpx;
   height: 128rpx;
@@ -22,4 +23,14 @@
 
 .userhello {
   margin-top: 100px;
+}
+
+/*首页幻灯片播放样式*/
+.swiper {
+  height: 340rpx;
+  width: 100%;
+}
+.swiper image {
+  height: 100%;
+  width: 100%;
 }
